force-app/main/default/objects/WorkOrder/fields/Installer__c.field-meta.xml
<CustomField>
        <fullName>Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </CustomField>