force-app/main/default/objects/WorkOrder/fields/Vehicle__c.field-meta.xml
<CustomField>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>WorkOrders</relationshipName>
        <type>Lookup</type>
    </CustomField>