force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
        <fullName>All_WorkOrders</fullName>
        <columns>Product__c</columns>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>Installer__c</columns>
        <columns>Owner</columns>
        <columns>Case</columns>
        <columns>CITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </ListView>