force-app/main/default/objects/WorkOrder/listViews/Fulfillment_WorkOrder.listView-meta.xml
<ListView>
        <fullName>Fulfillment_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Fulfillment</label>
        <queue>Fulfillment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>